--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <bd-header></bd-header>
 <div>
     <h1 class="container"> Personagens </h1>
-    <div class=" container d-flex flex-wrap  justify-content-between">
+    <div class=" container-lg d-flex flex-wrap  justify-content-between">
         
         <div *ngFor="let p of personagens " class=" card m-2 shadow-lg">
             <img [src]="p.img" class="card-img-top" [alt]="p.name">
