--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,17 @@
+/* Mobile First */
+@media (max-width: 999px) { 
+     .nav-link {
+        text-align: center;
+    }
+    .input-submit {
+        width: 100%;
+    }
+}
+
+/* End of Mobile First */
+.input-submit {
+    width: 25rem;
+}
 header-logo {
     background-color: transparent;
 }
@@ -15,7 +29,9 @@ li .nav-link:hover, .navbar-brand:hover {
 button:hover {
     color: black;
 }
-.navbar-toggler-icon, .navbar-toggler, .icon-bar {
-    color: white;
-    border-color: white;
+.custom-toggler, .navbar-toggler {
+    border-color: white ;
 }
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(255,255,255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") ;
+  }
