--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,13 @@
 <bd-header></bd-header>
 <div>
     <h1 class="container"> Personagens </h1>
-    <div class=" container-lg d-flex flex-wrap  justify-content-between mb-5">
-        
-        <div *ngFor="let p of personagens | paginate: {itemsPerPage: pagCounter, currentPage: pag} " class=" card m-2  shadow-lg">
+    <div class=" container-lg d-flex flex-wrap  justify-content-between mb-5 card-container">
+        <div *ngFor="let p of personagens | paginate: {itemsPerPage: pagCounter, currentPage: pag} "  class=" card m-2  shadow-lg">
+          <h3 class="p-2 text-center"> {{p.name}} </h3>
             <img [src]="p.img" class="card-img-top" [alt]="p.name">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <li class="card-text list-unstyled">{{p.birthday}} </li>
+              <li class="card-text list-unstyled"> {{p.occupation}} </li>
             </div>
           </div>
        
