Adicionado logica para abrir a pag de detalhes de cada personagem

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <div>
     <h1 class="container"> Personagens </h1>
     <div class=" container-lg d-flex flex-wrap  justify-content-between mb-5 card-container">
-        <div *ngFor="let p of personagens | paginate: {itemsPerPage: pagCounter, currentPage: pag} "  class=" card m-2  shadow-lg">
+        <div *ngFor="let p of personagens | paginate: {itemsPerPage: pagCounter, currentPage: pag} "  class=" card m-2  shadow-lg" (click)= "getDetail(p.char_id)">
           <h3 class="p-2 text-center"> {{p.name}} </h3>
             <img [src]="p.img" class="card-img-top" [alt]="p.name">
             <div class="card-body">
