--- a/src/app/personagens-detalhes/personagens-detalhes.component.html
+++ b/src/app/personagens-detalhes/personagens-detalhes.component.html
@@ -1,3 +1,4 @@
+<bd-header></bd-header>
 <div *ngFor="let item of id">
 <div  class="container d-flex flex-wrap justify-content-around container-detail">
     <div>
