--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-  <div class=" container-lg">
+  <div class=" container-lg container-header">
     <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" >BreakingBad API</a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" >Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" [routerLink]="['/home']">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" >Frases</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2 input-submit" type="search" placeholder="Search" aria-label="Search">
-      </form>
     </div>
 
   </div>
